--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-axios": "^3.3.7",
     "vue-i18n": "^8.26.1",
     "vue-router": "^3.2.0",
+    "vue-social-sharing": "^3.0.9",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
